--- a/Todo-App/src/App.css
+++ b/Todo-App/src/App.css
@@ -3,12 +3,15 @@
   padding: 0;
 }
 body{
-  background-color: #333;
+  /* background-color: #333; */
+  background-color: black;
+  
 }
 .main-container{
   display: flex;
   justify-content: center;
   align-items: center;
+  /* border: 2px; */
   height: 100vh;
 }
 .center-container{
